add atualização projeto

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,48 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Quicksand:wght@400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: normal;
+}
+
+html, body {
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    background-size: cover;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+}
+
+#telefone {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    height: 627px;
+    width: 311px;
+
+    background: url('../imagens/frame-iphone.png') no-repeat;
+}
+
+#tela {
+    position: relative;
+    top: 80px;
+    left: 22.3px;
+
+    background-color: red;
+
+    height: 471px;
+    width: 267px;
 }
