--- a/estilos/style.css
+++ b/estilos/style.css
@@ -62,7 +62,7 @@ main {
     top: 80px;
     left: 22.3px;
 
-    background-color: red;
+    background-color: black;
 
     height: 471px;
     width: 267px;
